<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             android:padding="@dimen/padding">

    <EditText
            android:id="@+id/et_activity_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/title_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <EditText
            android:id="@+id/et_activity_units"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/units_hint"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_activity_title"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>

    <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/cancel_btn"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/et_activity_units"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/ok_btn"/>

    <Button
            android:id="@+id/ok_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/ok_btn"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@+id/et_activity_units"
            app:layout_constraintEnd_toEndOf="parent"
            />

</android.support.constraint.ConstraintLayout>